syntax = "proto3";

package ci.test;
option java_package = "ru.yandex.ci.core.test.schema";
option java_multiple_files = true;

message Person {
    int32 age = 1;
    string first_name = 2;
}

message WrappedPerson {
    Person person_in_jail = 1;
}

message Couple {
    Person he = 1;
    Person she = 2;
}


message House {
    string address = 1;
    int32 bedrooms = 2;
}

message Mortgage {
    Person owner = 1;
    House house = 2;
}

message Party {
    Person owner = 1;
    repeated Person guests = 2;
}

// tasklets
// одинаковые input/output для упрощения тестирования
message SinglePersonTasklet {
    Person input = 1;
    Person output = 2;
}

message NestedInputSingleTasklet {
    WrappedPerson input = 1;
    WrappedPerson output = 2;
}

message CoupleTasklet {
    Couple input = 1;
    Couple output = 2;
}

message MortgageTasklet {
    Mortgage input = 1;
    Mortgage output = 2;
}

message PartyTasklet {
    Party input = 1;
    Party output = 2;
}

message JudgeTasklet {
    Person input = 1;
    WrappedPerson output = 2;
}
